horizontal scrolling fixed

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
     font-family: 'Encode Sans Condensed', "Arial Narrow", Arial, sans-serif;
     background-color:aliceblue;
     margin: 0;
+    overflow-x: hidden;
 }
 
 
@@ -203,6 +204,12 @@ footer{
 
   }
   @media screen and (max-width: 649px) {
+    
+    h1{
+        padding-top: 20px;
+
+    }
+    
     #firstImg{
         display: none;
     }
